next/Microservices/5/redmine/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-myserviceb
spec:
  rules:
  - host: myservice.foo.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: redmine-service
            port:
              number: 80
  ingressClassName: nginx
